--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
   ],
   "require": {
     "php": "^8.0|^8.1|^8.2|^8.3",
-    "illuminate/database": "^8.40.0|^9.0|^10.0|^11.0",
-    "illuminate/support": "^8.40.0|^9.0|^10.0|^11.0",
+    "illuminate/database": "^8.40.0|^9.0|^10.0|^11.0|^12.0",
+    "illuminate/support": "^8.40.0|^9.0|^10.0|^11.0|^12.0",
     "kalnoy/nestedset": "^6.0",
     "spatie/laravel-sluggable": "^2.2|^3.3|^3.4|^3.6"
   },
